@@ -1,5 +1,8 @@
 2004-07-20  Yann Hodique  <Yann.Hodique@lifl.fr>
 
+	* dotemacs.el:
+	make use of request instead of require when possible
+
 	* perso/setnu.el:
 	initial checkin
 
